--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-MONGODBURI=mongodb://localhost:27017/impulseapi
-PORT=3000
+MONGODBURI=mongodb+srv://default:tempL0GIN@cluster0.68eg7.mongodb.net/impulse?retryWrites=true&w=majority
